@@ -2,7 +2,7 @@ var CloudCommander, Util, DOM, $, Github, cb;
 /* module for work with github */
 
 (function(CloudCmd, Util, DOM){
-    "use strict";
+    'use strict';
     
     var Cache                           = DOM.Cache,
         GithubLocal,
